# edu_platform

./: alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml  settings.py
api/: handlers.py  models.py
db/: dals.py  models.py  session.py
migrations/: env.py
migrations/versions/: 4dab3bdfcb1d_create_table_for_users.py
tests/: conftest.py  test_handlers.py
